--- a/src/pages/page2/stylesheets/page2.css
+++ b/src/pages/page2/stylesheets/page2.css
@@ -4,3 +4,8 @@
   background-image: url("../images/timg.jpg");
   background-size: auto 100%;
 }
+
+.js-page2-chart {
+  width: 100%;
+  height: 10rem;
+}
