--- a/src/assets/stylesheets/common.css
+++ b/src/assets/stylesheets/common.css
@@ -1,4 +1,21 @@
 html, body {
   width: 100%;
   height: 100%;
+  background-image: url("../timg.jpg");
+  background-size: auto 100%;
+  background-attachment:fixed
+}
+
+.white_text{
+  color: white;
+}
+
+.text_center{
+  text-align: center;
+}
+
+.center{
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
 }
