--- a/src/pages/page2/stylesheets/page2.css
+++ b/src/pages/page2/stylesheets/page2.css
@@ -1,11 +1,16 @@
 .page2 {
   width: 100%;
   height: 100%;
-  background-image: url("../images/timg.jpg");
-  background-size: auto 100%;
 }
 
 .js-page2-chart {
   width: 100%;
   height: 10rem;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+}
+
+.text_2{
+  font-size: 1.3rem;
+  line-height: 3rem;
 }
