--- a/src/assets/stylesheets/common.css
+++ b/src/assets/stylesheets/common.css
@@ -14,8 +14,6 @@ html, body {
   text-align: center;
 }
 
-.center{
-  position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
+.text_left{
+  text-align: left;
 }
