--- a/src/pages/page2/stylesheets/page2.css
+++ b/src/pages/page2/stylesheets/page2.css
@@ -5,12 +5,13 @@
 
 .js-page2-chart {
   width: 100%;
-  height: 10rem;
-  margin-bottom: 2rem;
-  margin-top: 1rem;
+  height: 12rem;
+  margin-top: 2rem;
 }
 
 .text_2{
-  font-size: 1.3rem;
+  position: relative;
+  top: 3rem;
+  font-size: 1.5rem;
   line-height: 3rem;
 }
