--- a/src/assets/stylesheets/common.css
+++ b/src/assets/stylesheets/common.css
@@ -3,7 +3,7 @@ html, body {
   height: 100%;
   background-image: url("../timg.jpg");
   background-size: auto 100%;
-  background-attachment:fixed
+  background-attachment: fixed;
 }
 
 .white_text{
@@ -16,4 +16,24 @@ html, body {
 
 .text_left{
   text-align: left;
+}
+
+.dialog{
+  width: 95%;
+  height: 7rem;
+  position: relative;
+  background-color: rgba(243,141,231,0.8);
+  border-radius: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  box-shadow: inset 0 0 10px 5px rgb(202, 130, 200);
+  top: 70%;
+}
+
+.dialogue{
+  width: inherit;
+  position: absolute;
+  padding: 2px;
+  font-size: 1.3rem;
+  line-height: 25px;
 }
