--- a/src/pages/home/stylesheets/home.css
+++ b/src/pages/home/stylesheets/home.css
@@ -5,18 +5,74 @@
 
 .title{
   font-size: 1.5rem;
+  margin-bottom: 10%;
 }
 
-.music_box{
+.player{
   position: relative;
-  top: 10%;
-  background-color: #f3f5f7;
+  width: 100%;
   height: 40%;
+  text-align: center;
+}
+
+.btn{
+  height: 50px;
+  position: absolute;
+  z-index: 1;
+}
+
+.cover{
+  width: 15rem;
+  height: 15rem;
 }
 
 .text_h{
   position: relative;
   top: 7rem;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   line-height: 2rem;
+  padding-left: 1rem;
 }
+
+
+.cover{
+  -webkit-animation: rotate 10s linear infinite ;
+  -moz-animation: rotate 10s linear infinite;
+  animation: rotate 10s linear infinite;
+  animation-play-state: paused;
+}
+
+@-webkit-keyframes rotate{
+  0%{-webkit-transform: rotate(0deg);}
+  100%{transform: rotate(360deg);}
+}
+@-moz-keyframes rotate {
+  0%{-moz-transform: rotate(0deg);}
+  100%{transform: rotate(360deg);}
+}
+@keyframes rotate{
+  0%{transform: rotate(0deg);}
+  100%{transform: rotate(360deg);}
+}
+
+.home{
+  -webkit-animation: Sc 3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+  -moz-animation: Sc 3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+  animation: Sc 3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+  animation-delay: 2500ms;
+  animation-play-state: paused;
+}
+
+@-webkit-keyframes Sc {
+  0%{transform: translate(0,0);}
+  100%{transform: translate(0,-100%);}
+}
+@-moz-keyframes Sc {
+  0%{transform: translate(0,0);}
+  100%{transform: translate(0,-100%);}
+}
+@keyframes Sc {
+  0%{transform: translate(0,0);}
+  100%{transform: translate(0,-100%);}
+}
+
