--- a/src/pages/memory1/stylesheets/memory1.css
+++ b/src/pages/memory1/stylesheets/memory1.css
@@ -4,3 +4,14 @@
   background-image: url("../images/timg.jpg");
   background-size: auto 100%;
 }
+
+/*Animaiton*/
+.memory1{
+  animation: Me1In 2700ms ease-out 9s forwards;
+  animation-play-state: paused;
+}
+
+@keyframes Me1In {
+  0%{transform: translate(0,0); opacity: 0}
+  100%{transform: translate(0,-100%); opacity: 1}
+}
