--- a/src/pages/page1/stylesheets/page1.css
+++ b/src/pages/page1/stylesheets/page1.css
@@ -1,11 +1,48 @@
-.page1 {
+.page1{
   width: 100%;
   height: 100%;
 }
-.text_1{
+.text_1 {
   width: 100%;
   font-size: 1.7rem;
   line-height: 3rem;
   position: relative;
   top: 30%;
+}
+
+/*Animation*/
+.page1{
+  -webkit-animation: Pg1In 2500ms ease-out 4500ms forwards;
+  -moz-animation: Pg1In 2500ms ease-out 4500ms forwards;
+  animation: Pg1In 2500ms ease-out 4500ms forwards;
+  animation-play-state: paused;
+}
+.text_1{
+  animation: txt1Out 500ms linear 2000ms forwards;
+  animation-play-state: paused;
+}
+@-webkit-keyframes Pg1In {
+  0%{transform: translate(0,0);}
+  100%{transform: translate(0,-100%);}
+}
+@-moz-keyframes Pg1In {
+  0%{transform: translate(0,0);}
+  100%{transform: translate(0,-100%);}
+}
+@keyframes Pg1In {
+  0%{transform: translate(0,0);}
+  100%{transform: translate(0,-100%);}
+}
+
+@-webkit-keyframes txt1Out {
+  0%{opacity: 1; transform: translate(0, 0)}
+  100%{opacity: 0; transform: translate(0, -100%)}
+}
+@-moz-keyframes txt1Out {
+  0%{opacity: 1; transform: translate(0, 0)}
+  100%{opacity: 0; transform: translate(0, -100%)}
+}
+@keyframes txt1Out {
+  0%{opacity: 1; transform: translate(0, 0)}
+  100%{opacity: 0; transform: translate(0, -100%)}
 }
