--- a/src/pages/memory3/stylesheets/memory3.css
+++ b/src/pages/memory3/stylesheets/memory3.css
@@ -4,3 +4,31 @@
   background-image: url("../images/timg.jpg");
   background-size: auto 100%;
 }
+
+.Out{
+  width: 100%;
+  height: 100%;
+  transform:translate(0,-300%);
+  background-image: url("../images/timg.jpg");
+  background-size: auto 100%;
+}
+
+/*Animaiton*/
+.memory3{
+  animation: Me3In 2700ms ease-out 64s forwards;
+  animation-play-state: paused;
+}
+
+.Out{
+  animation: Out 1s linear 1s forwards;
+}
+
+@keyframes Me3In {
+  0%{transform: translate(0,0);}
+  100%{transform: translate(0,-300%);}
+}
+
+@keyframes Out {
+  0%{transform: translate(0,-300%);}
+  100%{transform: translate(0,-400%);}
+}
