--- a/src/assets/stylesheets/common.css
+++ b/src/assets/stylesheets/common.css
@@ -38,3 +38,17 @@ html, body {
   font-size: 1.3rem;
   line-height: 25px;
 }
+
+/*Animation*/
+@-webkit-keyframes FadeIn {
+  0%{opacity: 0}
+  100%{opacity: 1}
+}
+@-moz-keyframes FadeIn {
+  0%{opacity: 0}
+  100%{opacity: 1}
+}
+@keyframes FadeIn {
+  0%{opacity: 0}
+  100%{opacity: 1}
+}
