--- a/src/pages/home/stylesheets/home.css
+++ b/src/pages/home/stylesheets/home.css
@@ -36,27 +36,6 @@
 
 /*Animation*/
 
-.cover{
-  -webkit-animation: Rotate 10s linear infinite ;
-  -moz-animation: Rotate 10s linear infinite;
-  animation: Rotate 10s linear infinite;
-  animation-play-state: paused;
-}
-
-.home{
-  -webkit-animation: Scl 3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-  -moz-animation: Scl 3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-  animation: Scl 3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-  animation-delay: 2500ms;
-  animation-play-state: paused;
-}
-
-.text_h{
-  -webkit-animation: FadeIn linear 500ms forwards;
-  -moz-animation: FadeIn linear 500ms forwards;
-  animation: FadeIn linear 500ms forwards;
-}
-
 /*cover rotate*/
 @-webkit-keyframes Rotate{
   0%{-webkit-transform: rotate(0deg);}
@@ -73,16 +52,16 @@
 
 /*page scroll*/
 @-webkit-keyframes Scl {
-  0%{transform: translate(0,0);}
-  100%{transform: translate(0,-100%);}
+  0%{transform: translate(0,0); opacity: 1}
+  100%{transform: translate(0,-100%); opacity: 0}
 }
 @-moz-keyframes Scl {
-  0%{transform: translate(0,0);}
-  100%{transform: translate(0,-100%);}
+  0%{transform: translate(0,0); opacity: 1}
+  100%{transform: translate(0,-100%); opacity: 0}
 }
 @keyframes Scl {
-  0%{transform: translate(0,0);}
-  100%{transform: translate(0,-100%);}
+  0%{transform: translate(0,0); opacity: 1}
+  100%{transform: translate(0,-100%); opacity: 0}
 }
 
 @-webkit-keyframes FadeIn {
