--- a/src/pages/memory3/stylesheets/memory3.css
+++ b/src/pages/memory3/stylesheets/memory3.css
@@ -5,30 +5,23 @@
   background-size: auto 100%;
 }
 
-.Out{
+.Me3Out{
   width: 100%;
   height: 100%;
-  transform:translate(0,-300%);
+  transform:translate(0,-400%);
+  opacity: 1;
   background-image: url("../images/timg.jpg");
   background-size: auto 100%;
 }
 
 /*Animaiton*/
-.memory3{
-  animation: Me3In 2700ms ease-out 64s forwards;
-  animation-play-state: paused;
-}
-
-.Out{
-  animation: Out 1s linear 1s forwards;
-}
 
 @keyframes Me3In {
   0%{transform: translate(0,0);}
-  100%{transform: translate(0,-300%);}
+  100%{transform: translate(0,-400%);}
 }
 
-@keyframes Out {
-  0%{transform: translate(0,-300%);}
-  100%{transform: translate(0,-400%);}
+@keyframes M3Out {
+  0%{transform: translate(0,-400%); opacity: 1}
+  100%{transform: translate(0,-500%); opacity: 0}
 }
