--- a/src/assets/stylesheets/common.css
+++ b/src/assets/stylesheets/common.css
@@ -1,6 +1,7 @@
 html, body {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   background-image: url("../timg.jpg");
   background-size: auto 100%;
   background-attachment: fixed;
@@ -52,3 +53,31 @@ html, body {
   0%{opacity: 0}
   100%{opacity: 1}
 }
+
+/*page scroll*/
+@-webkit-keyframes Scl {
+  0%{transform: translate(0,0); opacity: 0}
+  100%{transform: translate(0,-100%); opacity: 1}
+}
+@-moz-keyframes Scl {
+  0%{transform: translate(0,0); opacity: 0}
+  100%{transform: translate(0,-100%); opacity: 1}
+}
+@keyframes Scl {
+  0%{transform: translate(0,0); opacity: 0}
+  100%{transform: translate(0,-100%); opacity: 1}
+}
+
+@-webkit-keyframes SclOut {
+  0%{transform: translate(0,0); opacity: 1}
+  100%{transform: translate(0,-100%); opacity: 0}
+}
+@-moz-keyframes SclOut {
+  0%{transform: translate(0,0); opacity: 1}
+  100%{transform: translate(0,-100%); opacity: 0}
+}
+@keyframes SclOut {
+  0%{transform: translate(0,0); opacity: 1}
+  100%{transform: translate(0,-100%); opacity: 0}
+}
+
