--- a/src/pages/memory1/stylesheets/memory1.css
+++ b/src/pages/memory1/stylesheets/memory1.css
@@ -3,14 +3,15 @@
   height: 100%;
   background-image: url("../images/timg.jpg");
   background-size: auto 100%;
+  z-index: -6;
 }
 
 /*Animaiton*/
-@-webkit-keyframes Me1In {
-  0%{transform: translate(0,0); opacity: 0}
+@-webkit-keyframes M1In {
+  0%{transform: translate(0,-100%); opacity: 0}
   100%{transform: translate(0,-200%); opacity: 1}
 }
-@keyframes Me1In {
-  0%{transform: translate(0,0); opacity: 0}
+@keyframes M1In {
+  0%{transform: translate(0,-100%); opacity: 0}
   100%{transform: translate(0,-200%); opacity: 1}
 }
