--- a/src/assets/stylesheets/common.css
+++ b/src/assets/stylesheets/common.css
@@ -1,10 +1,14 @@
 html, body {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   background-image: url("../timg.jpg");
   background-size: auto 100%;
   background-attachment: fixed;
+  overflow: hidden;
+}
+
+.Pages{
+  position: relative;
 }
 
 .white_text{
@@ -17,6 +21,10 @@ html, body {
 
 .text_left{
   text-align: left;
+}
+
+.text_right{
+  text-align: right;
 }
 
 .dialog{
@@ -49,17 +57,24 @@ html, body {
   0%{opacity: 0}
   100%{opacity: 1}
 }
+@-o-keyframes FadeIn {
+  0%{opacity: 0}
+  100%{opacity: 1}
+}
 @keyframes FadeIn {
   0%{opacity: 0}
   100%{opacity: 1}
 }
 
-/*page scroll*/
 @-webkit-keyframes Scl {
   0%{transform: translate(0,0); opacity: 0}
   100%{transform: translate(0,-100%); opacity: 1}
 }
 @-moz-keyframes Scl {
+  0%{transform: translate(0,0); opacity: 0}
+  100%{transform: translate(0,-100%); opacity: 1}
+}
+@-o-keyframes Scl {
   0%{transform: translate(0,0); opacity: 0}
   100%{transform: translate(0,-100%); opacity: 1}
 }
@@ -76,6 +91,10 @@ html, body {
   0%{transform: translate(0,0); opacity: 1}
   100%{transform: translate(0,-100%); opacity: 0}
 }
+@-o-keyframes SclOut {
+   0%{transform: translate(0,0); opacity: 1}
+   100%{transform: translate(0,-100%); opacity: 0}
+ }
 @keyframes SclOut {
   0%{transform: translate(0,0); opacity: 1}
   100%{transform: translate(0,-100%); opacity: 0}
