--- a/src/pages/memory2/stylesheets/memory2.css
+++ b/src/pages/memory2/stylesheets/memory2.css
@@ -3,16 +3,10 @@
   height: 100%;
   background-image: url("../images/timg.jpg");
   background-size: auto 100%;
-  z-index: -5;
 }
 
 /*Animaiton*/
-
-@-webkit-keyframes M2In {
-  0%{transform: translate(0,-200%);}
-  100%{transform: translate(0,-300%);}
-}
 @keyframes M2In {
-  0%{transform: translate(0,-200%);}
-  100%{transform: translate(0,-300%);}
+  0%{transform: translate(0,-200%); opacity: 0;}
+  100%{transform: translate(0,-300%); opacity: 1;}
 }
