--- a/src/pages/page4/stylesheets/page4.css
+++ b/src/pages/page4/stylesheets/page4.css
@@ -5,16 +5,82 @@
   background-size: auto 100%;
 }
 
+.text_4{
+  position: absolute;
+  width: 100%;
+  z-index: 0;
+  opacity: 0;
+}
+
+.BlOt{
+  opacity: 1;
+}
+
+.P4cover{
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: linear-gradient(to bottom right, black, black, rgba(0,0,0,0),rgba(0,0,0,0));
+  background-size: 450% 450%;
+}
+
+.T0{
+  opacity: 0;
+}
+
+.T1{
+  font-size: 1.5rem;
+  line-height: 2rem;
+  top: 45%;
+}
+
+.T2{
+  font-size: 1.5rem;
+  line-height: 2rem;
+  top: 20%;
+}
+
+.T3{
+  padding-left: 5%;
+  width: auto;
+  font-size: 1.2rem;
+  line-height: 2rem;
+  top: 60%
+}
+
+.T4{
+  font-size: 1.2rem;
+  line-height: 2rem;
+  padding-left: 10%;
+  width: auto;
+  top:30%;
+}
+
+.T5{
+  top: 40%;
+  font-size: 1.3rem;
+  line-height: 2rem;
+}
+
+.T6{
+  font-size: 1.5rem;
+  line-height: 2rem;
+  top: 45%;
+}
+
+.T7{
+  font-size: 2rem;
+  line-height: 2.5rem;
+  top: 45%;
+}
 
 /*Animation*/
-.BlOt{
-  animation: BlurOut 1s linear 500ms forwards;
-}
 
 @keyframes P4In {
-  0%{transform: translate(0, -600%)}
-  100%{transform: translate(0, -700%)}
+  0%{transform: translate(0, -600%); opacity: 0;}
+  100%{transform: translate(0, -700%); opacity: 1;}
 }
+
 @keyframes BlurIn {
   0%{
     filter: blur(20px);
@@ -29,6 +95,7 @@
     opacity: 1;
   }
 }
+
 @keyframes BlurOut {
   0%{
     filter: blur(0px);
@@ -42,4 +109,10 @@
     filter: blur(20px);
     opacity: 0;
   }
+}
+
+@keyframes Gradient {
+  0%{background-position: 0%,0%;}
+  50%{background-position: 50%,50%;}
+  100%{background-position: 100%,100%;}
 }
