--- a/src/assets/stylesheets/common.css
+++ b/src/assets/stylesheets/common.css
@@ -1,4 +1,12 @@
+@font-face {
+  font-family: fzjlt;
+  src: url(../fonts/FZJLT.woff) format('woff');
+  src: url(../fonts/FZJLT.eot) format('eot');
+  src: url(../fonts/FZJLT.ttf) format('truetype');
+}
+
 html, body {
+  font-family: fzjlt,-apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
   width: 100%;
   height: 100%;
   background-image: url("../timg.jpg");
