--- a/src/assets/stylesheets/common.css
+++ b/src/assets/stylesheets/common.css
@@ -9,7 +9,7 @@ html, body {
   font-family: fzjlt,-apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
   width: 100%;
   height: 100%;
-  background-image: url("../timg.jpg");
+  background-image: url("../images/timg.jpg");
   background-size: auto 100%;
   background-attachment: fixed;
   overflow: hidden;
