--- a/src/assets/stylesheets/common.css
+++ b/src/assets/stylesheets/common.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: fzjlt;
-  src: url(../fonts/FZJLT.woff) format('woff');
-  src: url(../fonts/FZJLT.eot) format('eot');
-  src: url(../fonts/FZJLT.ttf) format('truetype');
+  src: url(../fonts/FZJLT.eot) format('eot'),
+  url(../fonts/FZJLT.woff) format('woff'),
+  url(../fonts/FZJLT.ttf) format('truetype');
 }
 
 html, body {
-  font-family: fzjlt,-apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
+  font-family: fzjlt, -apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
   width: 100%;
   height: 100%;
   background-image: url("../images/timg.jpg");
@@ -15,31 +15,31 @@ html, body {
   overflow: hidden;
 }
 
-.Pages{
+.Pages {
   position: relative;
 }
 
-.white_text{
+.white_text {
   color: white;
 }
 
-.text_center{
+.text_center {
   text-align: center;
 }
 
-.text_left{
+.text_left {
   text-align: left;
 }
 
-.text_right{
+.text_right {
   text-align: right;
 }
 
-.dialog{
+.dialog {
   width: 95%;
   height: 7rem;
   position: relative;
-  background-color: rgba(243,141,231,0.8);
+  background-color: rgba(243, 141, 231, 0.8);
   border-radius: 10px;
   margin-right: auto;
   margin-left: auto;
@@ -48,7 +48,7 @@ html, body {
   visibility: hidden;
 }
 
-.dialogue{
+.dialogue {
   width: inherit;
   position: absolute;
   padding: 2px;
@@ -58,53 +58,126 @@ html, body {
 
 /*Animation*/
 @-webkit-keyframes FadeIn {
-  0%{opacity: 0}
-  100%{opacity: 1}
+  0% {
+    opacity: 0
+  }
+  100% {
+    opacity: 1
+  }
 }
+
 @-moz-keyframes FadeIn {
-  0%{opacity: 0}
-  100%{opacity: 1}
+  0% {
+    opacity: 0
+  }
+  100% {
+    opacity: 1
+  }
 }
+
 @-o-keyframes FadeIn {
-  0%{opacity: 0}
-  100%{opacity: 1}
+  0% {
+    opacity: 0
+  }
+  100% {
+    opacity: 1
+  }
 }
+
 @keyframes FadeIn {
-  0%{opacity: 0}
-  100%{opacity: 1}
+  0% {
+    opacity: 0
+  }
+  100% {
+    opacity: 1
+  }
 }
 
 @-webkit-keyframes Scl {
-  0%{transform: translate(0,0); opacity: 0}
-  100%{transform: translate(0,-100%); opacity: 1}
+  0% {
+    transform: translate(0, 0);
+    opacity: 0
+  }
+  100% {
+    transform: translate(0, -100%);
+    opacity: 1
+  }
 }
+
 @-moz-keyframes Scl {
-  0%{transform: translate(0,0); opacity: 0}
-  100%{transform: translate(0,-100%); opacity: 1}
+  0% {
+    transform: translate(0, 0);
+    opacity: 0
+  }
+  100% {
+    transform: translate(0, -100%);
+    opacity: 1
+  }
 }
+
 @-o-keyframes Scl {
-  0%{transform: translate(0,0); opacity: 0}
-  100%{transform: translate(0,-100%); opacity: 1}
+  0% {
+    transform: translate(0, 0);
+    opacity: 0
+  }
+  100% {
+    transform: translate(0, -100%);
+    opacity: 1
+  }
 }
+
 @keyframes Scl {
-  0%{transform: translate(0,0); opacity: 0}
-  100%{transform: translate(0,-100%); opacity: 1}
+  0% {
+    transform: translate(0, 0);
+    opacity: 0
+  }
+  100% {
+    transform: translate(0, -100%);
+    opacity: 1
+  }
 }
 
 @-webkit-keyframes SclOut {
-  0%{transform: translate(0,0); opacity: 1}
-  100%{transform: translate(0,-100%); opacity: 0}
+  0% {
+    transform: translate(0, 0);
+    opacity: 1
+  }
+  100% {
+    transform: translate(0, -100%);
+    opacity: 0
+  }
 }
+
 @-moz-keyframes SclOut {
-  0%{transform: translate(0,0); opacity: 1}
-  100%{transform: translate(0,-100%); opacity: 0}
+  0% {
+    transform: translate(0, 0);
+    opacity: 1
+  }
+  100% {
+    transform: translate(0, -100%);
+    opacity: 0
+  }
 }
+
 @-o-keyframes SclOut {
-   0%{transform: translate(0,0); opacity: 1}
-   100%{transform: translate(0,-100%); opacity: 0}
- }
+  0% {
+    transform: translate(0, 0);
+    opacity: 1
+  }
+  100% {
+    transform: translate(0, -100%);
+    opacity: 0
+  }
+}
+
 @keyframes SclOut {
-  0%{transform: translate(0,0); opacity: 1}
-  100%{transform: translate(0,-100%); opacity: 0}
+  0% {
+    transform: translate(0, 0);
+    opacity: 1
+  }
+  100% {
+    transform: translate(0, -100%);
+    opacity: 0
+  }
 }
 
